# error-emailer

./: .gitignore  README.md  setup.cfg  setup.md  test.py
emailer/: send_email.py
error-emailer/: main.py  send_email.py
error_emailer/: __init__.py  send_email.py
erroremailer/: send_email.py
