[metadata]
# replace with your username:
name = error-emailer
version = 0.1.2
author = Stvgz
author_email = zhitao.gao@outlook.com
description = auto emailer
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stvgz/error-emailer
project_urls =
    Bug Tracker = https://github.com/stvgz/error-emailer/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
# python_requires = >=3.6